# treesort

./: CMakeLists.txt  Grafico_1.ipynb  Grafico_2.ipynb  Grafico_3.ipynb  README.md  main  main.cpp  treesort_resultados.csv
.ipynb_checkpoints/: Grafico_1-checkpoint.ipynb  Grafico_2-checkpoint.ipynb
include/: Cola.hpp  Diccionario.hpp  NodoDiccionario.hpp  NodoLista.hpp  Treesort.hpp  Vector.hpp  treesort.hpp
src/: treesort.cpp
